@@ -14,15 +14,13 @@ import javafx.scene.image.Image;
 import javafx.scene.image.ImageView;
 import javafx.scene.layout.BorderPane;
 import javafx.scene.layout.HBox;
-import javafx.scene.layout.Region;
 import javafx.scene.layout.StackPane;
 import javafx.scene.layout.VBox;
 import javafx.stage.Modality;
 import javafx.stage.Stage;
 import javafx.stage.StageStyle;
-import dao.BarangDAO;
-import dao.KategoriDAO;
-import model.Barang;
+import DAO.BarangDAO;
+import DAO.KategoriDAO;
 import model.Kategori;
 import javafx.scene.control.ListCell;
 
@@ -118,7 +116,7 @@ public class TambahBarangController {
 
     private void updateGeneratedBarangId() {
         String idKategori = getSelectedKategoriId();
-        if (idKategori.isBlank()) {
+        if (idKategori.trim().isEmpty()) {
             txtIdBarang.clear();
             return;
         }
