@@ -1,4 +1,4 @@
-package dao;
+package DAO;
 
 import config.koneksi;
 import java.sql.*;
@@ -103,7 +103,7 @@ public class PengeluaranDAO {
 
     private static LocalDate readLocalDate(ResultSet rs, String columnName) throws SQLException {
         String value = rs.getString(columnName);
-        if (value == null || value.isBlank()) {
+        if (value == null || value.trim().isEmpty()) {
             return null;
         }
 
